--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ input[type="text"].input-heading {
   width: 100%;
   border-radius: 5px;
   resize: none;
-  opacity: 0.9;
+  opacity: 0.8;
   border: 0;
   outline: 0;
   margin: 0;
@@ -72,9 +72,11 @@ input[type="text"].input-heading {
 }
 
 input[type="text"].input-author:focus,
-input[type="text"].input-heading:focus {
+input[type="text"].input-heading:focus,
+.input-task:focus {
   border-bottom: 0 !important;
   box-shadow: none !important;
+  opacity: 1;
 }
 
 .input-button {
