--- a/style.css
+++ b/style.css
@@ -133,6 +133,27 @@ input[type="text"].input-heading:focus,
   opacity: 0.7;
 }
 
+input[type="text"].hidden-input {
+  display: none;
+  background: #ffffff;
+  color: #111111;
+  width: 70%;
+  height: 24px;
+  border-radius: 5px;
+  resize: none;
+  opacity: 1;
+  border: 1px solid black;
+  outline: 0;
+  margin: 0;
+  font-family: 'Courgette', cursive;
+  font-size: 16px;
+}
+
+input[type="text"].hidden-input:focus {
+  border-bottom: 0 !important;
+  box-shadow: none !important;
+}
+
 .task-author,
 .task-status {
   font-weight: bold;
@@ -142,22 +163,6 @@ input[type="text"].input-heading:focus,
 .task-status {
   text-transform: capitalize;
 }
-/*
-.status-todo .task-status{
-  color: #ff4d4d;
-}
-
-.status-progress .task-status{
-  color: #e6ac00;
-}
-
-.status-review .task-status{
-  color: #4d88ff;
-}
-
-.status-done .task-status{
-  color: #00b300;
-}*/
 
 .close-button {
   position: absolute;
